# GazeboSim_performance_inspector

./: CMakeLists.txt  README.md
include/: Listener.hh
scripts/: log_gazebo_11_metrics.bash  metric_stats.py  plot_metrics.py  rtf_plotter.py
src/: Gazebo11Listener.cc  IgnDomeListener.cc  main.cc
worlds/: pendulum.sdf  pendulum_1.sdf  pendulum_10.sdf  pendulum_100.sdf  pendulum_15.sdf  pendulum_150.sdf  pendulum_250.sdf  pendulum_30.sdf  pendulum_5.sdf  pendulum_50.sdf  pendulum_500.sdf  pendulum_75.sdf  pendulum_test.sdf.erb  robot_models.sdf.erb  robots_1.sdf  robots_10.sdf  robots_100.sdf  robots_150.sdf  robots_30.sdf  robots_5.sdf  robots_50.sdf  robots_75.sdf  shapes.sdf.erb  shapes_non_1.sdf  shapes_non_10.sdf  shapes_non_100.sdf  shapes_non_1000.sdf  shapes_non_250.sdf  shapes_non_5.sdf  shapes_non_50.sdf  shapes_non_500.sdf  shapes_static_1.sdf  shapes_static_10.sdf  shapes_static_100.sdf  shapes_static_1000.sdf  shapes_static_250.sdf  shapes_static_5.sdf  shapes_static_50.sdf  shapes_static_500.sdf
worlds/meshes/: test_x1.sdf
